--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
                     year of my education is at Konya Technical University , 2 years at Kocaeli
                     University. I’m interested in web,game development and blockchain techonologies. I am
                     currently working on web development.</p>
-                    <p class="lead mb-5">
-                        I made some web projects. You can take a look at the links below. I've never done complex game programming, but I love game development math and logic.
-                        My blockchain interest are coming from same reason. But I took part in an advanced project on blockchain for 4-5 months and therefore I gained good technical and theoretical knowledge.
-                    </p>
+                <p class="lead mb-5">
+                    I made some web projects. You can take a look at the links below. I've never done complex game
+                    programming, but I love game development math and logic.
+                    My blockchain interest are coming from same reason. But I took part in an advanced project on
+                    blockchain for 4-5 months and therefore I gained good technical and theoretical knowledge.
+                </p>
                 <div class="social-icons">
                     <a class="social-icon" id="social1" href="https://www.linkedin.com/in/mnmercan/" target="_blank"><i
                             class="fab fa-linkedin-in"></i></a>
@@ -87,8 +89,10 @@
                                 </a>
                                 <p></p>
                             </li>
-                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/GPSCarTracking" target="_blank">
-                                <div class="subheading mb-3">Car Tracking System With GPS location data.</div></a>
+                            <li class="expList"> <a class="projectLinks"
+                                    href="https://github.com/MNMercan/GPSCarTracking" target="_blank">
+                                    <div class="subheading mb-3">Car Tracking System With GPS location data.</div>
+                                </a>
                                 <p></p>
                             </li>
                         </ul>
@@ -114,12 +118,14 @@
                                 </a>
                                 <p>Sudoku Solver for understanding Threads concept </p>
                             </li>
-                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/HelloWorld" target="_blank">
+                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/HelloWorld"
+                                    target="_blank">
                                     <div class="subheading mb-3">Race Cars</div>
                                 </a>
                                 <p>I made this game with HTML CSS and Javascript</p>
                             </li>
-                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/HelloWorld" target="_blank">
+                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/HelloWorld"
+                                    target="_blank">
                                     <div class="subheading mb-3">Catch Me If You Can</div>
                                 </a>
                                 <p></p>
@@ -146,11 +152,13 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Mobile (Beginner)</h3>
                         <ul>
-                            <li class="expList"><a class="projectLinks" href="https://github.com/MNMercan/UserAuth-React-Native" target="_blank">
-                                <div class=" subheading mb-3">User Authentication
-                                    With
-                                    Firebase in React Native
-                                </div></a>
+                            <li class="expList"><a class="projectLinks"
+                                    href="https://github.com/MNMercan/UserAuth-React-Native" target="_blank">
+                                    <div class=" subheading mb-3">User Authentication
+                                        With
+                                        Firebase in React Native
+                                    </div>
+                                </a>
                                 <p></p>
                             </li>
                         </ul>
@@ -161,15 +169,18 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Team Projects</h3>
                         <ul>
-                            <li class="expList"><a class="projectLinks" href="https://github.com/MNMercan/ProLab1-1-" target="_blank">
+                            <li class="expList"><a class="projectLinks" href="https://github.com/MNMercan/ProLab1-1-"
+                                    target="_blank">
                                     <div class="subheading mb-3">Student Information System</div>
                                 </a>
                             </li>
-                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/Prolab-1-2" target="_blank">
+                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/Prolab-1-2"
+                                    target="_blank">
                                     <div class="subheading mb-3">Suffix Tree Algorithm with graphics.h lib in C</div>
                                 </a>
                             </li>
-                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/Prolab1-3" target="_blank">
+                            <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/Prolab1-3"
+                                    target="_blank">
                                     <div class="subheading mb-3">Air Traffic Control with Priority Queue</div>
                                 </a>
                             </li>
@@ -272,7 +283,7 @@
                     </li>
                     <li>
                         <span class="fa-li"><i class="fas fa-check"></i></span>
-                        <a class="projectLinks" href="">Photography (Landscape & Nature)</a> 
+                        <a class="projectLinks" href="">Photography (Landscape & Nature)</a>
                     </li>
                 </ul>
             </div>
