--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                     target="_blank">
                                     <div class="subheading mb-3">Academic Article Search Engine with Neo4J Graph Data
                                         Base
-                                        <span>Used Visualization library Neovis.js</span>
+                                        <span>Used Graph Visualization library Neovis.js</span>
                                     </div>
                                 </a>
                                 <p></p>
