added new projects

--- a/index.html
+++ b/index.html
@@ -91,6 +91,20 @@
                                 <p></p>
                             </li>
                             <li class="expList"> <a class="projectLinks"
+                                    href="https://github.com/MNMercan/CurrentWeatherApp" target="_blank">
+                                    <div class="subheading mb-3"> Current Weather Application with OpenWeather API</div>
+                                </a>
+                                <p> This weather app brings you the current weather of the city you want.
+                                </p>
+                            </li>
+                            <li class="expList"> <a class="projectLinks"
+                                href="https://github.com/MNMercan/StajCalismalarim/tree/master/Random-Quotes" target="_blank">
+                                <div class="subheading mb-3"> Random Quotes Generator </div>
+                            </a>
+                            <p> 
+                            </p>
+                        </li>
+                            <li class="expList"> <a class="projectLinks"
                                     href="https://github.com/MNMercan/GPSCarTracking" target="_blank">
                                     <div class="subheading mb-3">Car Tracking System With GPS location data.</div>
                                 </a>
