--- a/index.html
+++ b/index.html
@@ -80,6 +80,30 @@
                 <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Web Development</h3>
+                        <hr>
+                        <h4>Real Projects</h4>
+                        
+                        <ul>
+                            <li class="expList"> <a class="projectLinks" href="https://www.klusbedrijfonmaz.nl/"
+                                    target="_blank">
+                                    <div class="subheading mb-3">A full-stack renovation and maintenance website for a customer.
+                                        <span></span>
+                                    </div>
+                                </a>
+                                <p></p>
+                            </li>
+                            <li class="expList"> <a class="projectLinks" href="http://özelberrakanaokulu.com/"
+                                target="_blank">
+                                <div class="subheading mb-3">Promotional web page for a kindergarten.
+                                    <span></span>
+                                </div>
+                            </a>
+                            <p>I developed all the works of this project myself, and transferred it as a real work.</p>
+                        </li>
+                        </ul>
+                        <hr>
+                        <h4>My Own Practical Projects</h4>
+                        
                         <ul>
                             <li class="expList"> <a class="projectLinks" href="https://github.com/MNMercan/Neo4J"
                                     target="_blank">
@@ -98,12 +122,13 @@
                                 </p>
                             </li>
                             <li class="expList"> <a class="projectLinks"
-                                href="https://github.com/MNMercan/StajCalismalarim/tree/master/Random-Quotes" target="_blank">
-                                <div class="subheading mb-3"> Random Quotes Generator </div>
-                            </a>
-                            <p> 
-                            </p>
-                        </li>
+                                    href="https://github.com/MNMercan/StajCalismalarim/tree/master/Random-Quotes"
+                                    target="_blank">
+                                    <div class="subheading mb-3"> Random Quotes Generator </div>
+                                </a>
+                                <p>
+                                </p>
+                            </li>
                             <li class="expList"> <a class="projectLinks"
                                     href="https://github.com/MNMercan/GPSCarTracking" target="_blank">
                                     <div class="subheading mb-3">Car Tracking System With GPS location data.</div>
@@ -158,6 +183,11 @@
                                     Logistic Supply Chain with IOT
                                 </div>
                                 <p></p>
+                            </li>
+                            <li class="expList">
+                                <div class=" subheading mb-3">Archive System with Blockchain
+                                </div>
+                                <p>A research project for my graduation.</p>
                             </li>
                         </ul>
 
