--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+          
 </head>
 
 <body id="page-top">
@@ -53,9 +56,9 @@
                         style="text-decoration: none;text-transform:lowercase;">numan.mercan24@gmail.com</a>
                 </div>
                 <p class="lead mb-5">I’m a 4th year student of Computer Engineering at Kocaeli University. The first
-                    year of my education is at Konya Technical University , 2 years at Kocaeli
+                    year of my education is at Konya Technical University , 3 years at Kocaeli
                     University. I’m interested in web,game development and blockchain techonologies. I am
-                    currently working on web development.</p>
+                    currently working on web development. I am offering small-scale web services to clients as a freelancer.</p>
                 <p class="lead mb-5">
                     I made some web projects. You can take a look at the links below. I've never done complex game
                     programming, but I love game development math and logic.
@@ -244,7 +247,7 @@
                     <div class="flex-grow-1">
                         <h3 class="mb-0">Kocaeli University</h3>
                         <div class="subheading mb-3">Computer Engineering</div>
-                        <p>GPA: 3.16/4</p>
+                        <p>GPA: 3.17/4</p>
                     </div>
                     <div class="flex-shrink-0"><span class="text-primary">2020-2023</span></div>
                 </div>
@@ -275,6 +278,7 @@
                 <ul class="list-inline dev-icons">
                     <li class="list-inline-item"><i class="fab fa-html5" style="color: #e54c21;"></i></li>
                     <li class="list-inline-item"><i class="fab fa-css3-alt" style="color: #2449d8;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-bootstrap" style="color: #7852b3;"></i></li>
                     <li class="list-inline-item"><i class="fab fa-js-square" style="color: #ead41c;"></i></li>
                     <li class="list-inline-item"><i class="fab fa" style="color: #00417b;">C</i></li>
                     <li class="list-inline-item"><i class="fab fa-java" style="color: #4f7b99;"></i></li>
@@ -283,6 +287,39 @@
                     <li class="list-inline-item"><i class="fab fa-github" style="color: #202020;"></i></li>
 
                 </ul>
+                <div class="subheading mb-3">In Learning & Practice Proccess</div>
+                <ul class="list-inline dev-icons">
+                    <li class="list-inline-item"><i class="fab fa-react" style="color: #5ed3f3;"></i></li>
+                    <li class="list-inline-item"><i class="fab fa-ethereum" style="color: #5f658b;"></i></li>
+                    <li class="list-inline-item"><i class="devicon-solidity-plain"></i></li>
+                   
+
+                </ul>
+                <div class="subheading mb-3">Languages</div>
+                <ul class="fa-ul mb-0">
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <a class="projectLinks" href="https://www.efset.org/cert/qF9gEy" target="_blank">English, B1</a>
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        Turkish, Native
+                    </li>
+                </ul>
+                <br>
+                <div class="subheading mb-3">Certificates</div>
+                <ul class="fa-ul mb-0">
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <a class="projectLinks" href="https://www.efset.org/cert/qF9gEy" target="_blank">EF SET Intermediate Certificate</a>
+                    </li>
+                    <li>
+                        <span class="fa-li"><i class="fas fa-check"></i></span>
+                        <a class="projectLinks" href="https://www.freecodecamp.org/certification/numanmercan/javascript-algorithms-and-data-structures" target="bl
+                        ">JavaScript Algorithms and Data Structures Certificate</a>
+                    </li>
+                </ul>
+                <br><br><hr>
                 <div class="subheading mb-3">Competencies</div>
                 <ul class="fa-ul mb-0">
                     <li>
