--- a/index.html
+++ b/index.html
@@ -107,21 +107,19 @@
               >numan.mercan24@gmail.com</a
             >
           </div>
-          <p class="lead mb-5">
-            I’m a 4th year student of Computer Engineering at Kocaeli
-            University. The first year of my education is at Konya Technical
-            University , 3 years at Kocaeli University. I’m interested in
-            web,game development and blockchain techonologies. I am currently
-            working on web development. I am offering small-scale web services
-            to clients as a freelancer.
+          <p class="lead mb-3">
+            Graduated of Computer Engineering at Kocaeli University. I
+            completed the first year of my education at Konya Technical
+            University and 3 years at Kocaeli University. I am interested in
+            web, game development and blockchain technologies.
           </p>
           <p class="lead mb-5">
-            I made some web projects. You can take a look at the links below.
-            I've never done complex game programming, but I love game
-            development math and logic. My blockchain interest are coming from
-            same reason. But I took part in an advanced project on blockchain
-            for 4-5 months and therefore I gained good technical and theoretical
-            knowledge.
+            Proficient in CSS, Bootstrap, Tailwind CSS, JavaScript, React, and
+            NodeJS, I've also managed projects using Git and GitHub. Throughout
+            my academic journey, I've offered freelance web services for keeping
+            my skills current. An internship at a global firm (Jotform) immersed
+            me in real-world teamwork and project management, providing
+            practical experience with React, Tailwind CSS, and Git.
           </p>
           <div class="social-icons">
             <a
@@ -160,21 +158,15 @@
               <h3 class="mb-0">Internship</h3>
               <hr />
               <h4>
-                <span
-                  ><img
-                    class="jf-brand"
-                    src="https://www.jotform.com/resources/assets/svg/jotform-logo-white.svg"
-                    alt=""
-                /></span>
+                JOTFORM
               </h4>
-
               <ul>
                 <li class="expList">
                   <div class="subheading mb-3">Learning Management System</div>
                   <p>
                     With a team of 4 people, we created a full stack Learning
-                    Management System. I took part in this project as a
-                    frontend developer.
+                    Management System. I took part in this project as a frontend
+                    developer. <span style="text-decoration: underline;">This project won the "Best Growth Project Award"</span>.
                   </p>
                 </li>
               </ul>
@@ -424,7 +416,7 @@
             <div class="flex-grow-1">
               <h3 class="mb-0">Kocaeli University</h3>
               <div class="subheading mb-3">Computer Engineering</div>
-              <p>GPA: 3.17/4</p>
+              <p>GPA: 3.18/4 <span>(Graduating: Oct 2023 )</span></p>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">2020-2023</span>
@@ -469,7 +461,13 @@
               <i class="fab fa-bootstrap" style="color: #7852b3"></i>
             </li>
             <li class="list-inline-item">
-              <i class="fab fa-js-square" style="color: #ead41c"></i>
+              <i class="" style="vertical-align: 0.125em;"><img width="54px" height="100%" src="./assets/img/Tailwind_CSS_Logo.svg" alt=""></i>
+            </li>
+            <li class="list-inline-item ">
+              <i class="fab fa-js-square" style="color: #323330;"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="fab fa-react" style="color: #5ed3f3"></i>
             </li>
             <li class="list-inline-item">
               <i class="fab fa" style="color: #00417b">C</i>
@@ -490,14 +488,12 @@
           <div class="subheading mb-3">In Learning & Practice Proccess</div>
           <ul class="list-inline dev-icons">
             <li class="list-inline-item">
-              <i class="fab fa-react" style="color: #5ed3f3"></i>
-            </li>
-            <li class="list-inline-item">
               <i class="fab fa-ethereum" style="color: #5f658b"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicon-solidity-plain"></i>
             </li>
+
           </ul>
           <div class="subheading mb-3">Languages</div>
           <ul class="fa-ul mb-0">
@@ -532,9 +528,17 @@
               <a
                 class="projectLinks"
                 href="https://www.freecodecamp.org/certification/numanmercan/javascript-algorithms-and-data-structures"
-                target="bl
-                        "
+                target="_blank"
                 >JavaScript Algorithms and Data Structures Certificate</a
+              >
+            </li>
+            <li>
+              <span class="fa-li"><i class="fas fa-check"></i></span>
+              <a
+                class="projectLinks"
+                href="https://www.jotform.com/pdf-view/473d855fee"
+                target="_blank"
+                >Jotform Best Growth Project Award</a
               >
             </li>
           </ul>
@@ -556,6 +560,10 @@
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
+              Team Work
+            </li>
+            <li>
+              <span class="fa-li"><i class="fas fa-check"></i></span>
               Math
             </li>
           </ul>
@@ -573,7 +581,7 @@
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
-              Street Workout
+              Olympic Weightlifting
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
