added crossfit hobbies

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
-              Olympic Weightlifting
+              Olympic Weightlifting & Crossfit
             </li>
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
