--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <a
               class="social-icon"
               id="social2"
-              href="https://github.com/MNMercan"
+              href="https://github.com/mnumanmercan"
               target="_blank"
               ><i class="fab fa-github"></i
             ></a>
@@ -480,7 +480,7 @@
             <div class="flex-grow-1">
               <h3 class="mb-0">Kocaeli University</h3>
               <div class="subheading mb-3">Computer Engineering</div>
-              <p>GPA: 3.18/4 <span>(Graduating: Oct 2023 )</span></p>
+              <p>GPA: 3.18/4</p>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">2020-2023</span>
